<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardElevation="@dimen/appbar_padding_top">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.univ_setif.fsciences.qcm.MCQEditor">

        <EditText
            android:id="@+id/question"
            android:layout_width="0dp"
            android:layout_height="171dp"
            android:layout_marginEnd="42dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="31dp"
            android:ems="10"
            android:hint="@string/question_goes_here"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="31dp"
            android:layout_height="286dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.378"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0">

            <RadioButton
                android:id="@+id/isCorrect1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/isCorrect2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/isCorrect3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/isCorrect4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="274dp"
            android:layout_height="294dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question"
            app:layout_constraintVertical_bias="0.909">

            <EditText
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/answer_1"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:singleLine="true"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/answer_2"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:singleLine="true"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/answer_3"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:singleLine="true"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/answer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/answer_4"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:singleLine="true"
                android:textSize="12sp" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>